--- a/AlunoOnlineTest/build.xml
+++ b/AlunoOnlineTest/build.xml
@@ -5,13 +5,14 @@
 
 	<property name="warfile" value="AlunoOnlineTest" />
 	<property name="APP" value="AlunoOnlineTest" />
-	<!-- <property name="toncat" value="\Program Files (x86)\Apache Software Foundation\Tomcat 7.0\" />  -->
+	<!-- <property name="toncat" value="C:\Program Files (x86)\Apache Software Foundation\Tomcat 7.0\" />  -->
 	
 	<property name="toncat" value="/home/novajoc/appservers/apache-tomcat-7x/" />	
     <property name="classes" location="${toncat}\webapps\${APP}\WEB-INF\classes"/>
     <property name="test-classes" location="${toncat}\webapps\${APP}\WEB-INF\classes"  />
     <property name="test-reports" location="${toncat}\webapps\${APP}\WEB-INF\classes"/>
-	<!-- <property name="destino" value="\Program Files (x86)\Apache Software Foundation\Tomcat 7.0\webapps\" />  -->
+	<!-- <property name="destino" value="C:\Program Files (x86)\Apache Software Foundation\Tomcat 7.0\webapps\" />  -->
+	
 	<property name="destino" value="/home/novajoc/appservers/apache-tomcat-7x/" />
 	<property name="testdir" location="test" />
 	<property name="srcdir" location="src" />
@@ -35,7 +36,7 @@
     </path>
 
 	<target name="unpack">
-		<unwar src="${warfile}.war" dest="${destino}${warfile}" />
+		<unwar src="${warfile}.war" dest="${toncat}webapps\${warfile}" />
 	</target>
 
 	<target name="create">
@@ -62,10 +63,9 @@
             <classpath refid="test-classpath"/>
             <formatter type="brief" usefile="false"/>
             <formatter type="xml"/>
-            <batchtest todir="${test-reports}" failureproperty="failed"
-                       errorproperty="failed">
+            <batchtest todir="${test-reports}" failureproperty="failed" errorproperty="failed">
                 <fileset dir="${test-classes}" includes="**/*Test*.class"/>
-            </batchtest>
+            </batchtest> 
         </junit>
     </target>
 	<!-- fim teste -->
