--- a/AlunoOnlineTest/build.xml
+++ b/AlunoOnlineTest/build.xml
@@ -65,7 +65,7 @@
 		
 	<target name="copy-build-class">
 		<copy todir="./build/classes" overwrite="true">			
-			<fileset dir="${toncat}webapps/${APP}/WebContent/WEB-INF/classes"/>
+			<fileset dir="${toncat}webapps/${APP}/WEB-INF/classes/*"/>
 		</copy>
 	</target>
 		
