--- a/AlunoOnlineTest/build.xml
+++ b/AlunoOnlineTest/build.xml
@@ -46,33 +46,31 @@
 	</target>
 
 	<target name="create">
-		<war destfile="${warfile}.war" webxml="WebContent/WEB-INF/web.xml" update="true">
-			<classes dir="build/classes" />
+		<war destfile="${destino}webapps/${warfile}.war" webxml="WebContent/WEB-INF/web.xml" update="true">
+			<classes dir="classes" />
 			<fileset dir="WebContent">
 				<exclude name="WEB-INF/web.xml" />
 			</fileset>
 		</war>
 	</target>
 
+	<!--	
 	<target name="copy">
-		<copy todir="${destino}" overwrite="true">
+		<copy todir="${destino}webapps" overwrite="true">
 			<fileset dir=".">
 				<include name="*.war" />
 			</fileset>
 		</copy>
 	</target>
-		
+	-->	
 		
 	<target name="copy-build-class">
 		<copy todir="./build/classes" overwrite="true">			
-			<fileset dir="${warfile}/WEB-INF/classes/*.class"/>
+			<fileset dir="${warfile}/WEB-INF/classes/"/>
 		</copy>
 	</target>
-		
-		
 
-
-	<!-- inicio teste -->
+	<!-- inicio teste  -->
 	<target name="test" >
         <mkdir dir="${test-reports}"/>
         <junit printsummary="yes">
