--- a/AlunoOnlineTest/build.xml
+++ b/AlunoOnlineTest/build.xml
@@ -42,6 +42,7 @@
     </path>
     
     <target name="deploy">
+    	<classpath refid="test-classpath"/>
         <mkdir dir="build/classes"/>
         <javac srcdir="src" destdir="build/classes"/>
     </target>
