--- a/AlunoOnlineTest/build.xml
+++ b/AlunoOnlineTest/build.xml
@@ -61,7 +61,10 @@
 	        <junit printsummary="yes">
 	            
 	            	<classpath refid="test-classpath"/>
-	                        
+	            	
+		        <formatter type="brief" usefile="false"/>
+		        <formatter type="xml"/>
+	            	
 	            	<batchtest fork="yes">
 	                	<fileset dir="${test-classes}" includes="**/*Test*.class"/>
 	            	</batchtest> 
