--- a/projteste/pom.xml
+++ b/projteste/pom.xml
@@ -5,12 +5,13 @@
   <version>0.0.1-SNAPSHOT</version>
   
   <dependencies>
-        <dependency>
-            <groupId>junit</groupId> 
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+  
+		<dependency>
+			<groupId>org.jbehave</groupId>
+			<artifactId>jbehave-maven-plugin</artifactId>
+			<version>4.0.4</version>
+		</dependency>
+
+  </dependencies>
     
 </project>
