--- a/AlunoOnlineTest/build.xml
+++ b/AlunoOnlineTest/build.xml
@@ -51,7 +51,7 @@
 					
 	<target name="compile">
         <mkdir dir="build/classes"/>
-        <javac srcdir="test" destdir="build/classes" classpathref="test-classpath"/>
+        <javac srcdir="test" destdir="build/classes" classpathref="test-classpath" encoding="utf-8"/>
     </target>		
 		
 	<!-- inicio teste  -->
