--- a/AlunoOnlineTest/build.xml
+++ b/AlunoOnlineTest/build.xml
@@ -66,7 +66,7 @@
 		        <formatter type="brief" usefile="false"/>
 		        <formatter type="xml"/>
 	            	
-	            	<batchtest fork="yes">
+	            	<batchtest fork="no">
 	                	<fileset dir="${test-classes}" includes="**/*Steps*.class"/>
 	            	</batchtest> 
 	        </junit>
